Layout bugfix

--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@ html {
     color: white;
     background-color: black;
 
-    width: calc(100% - 32px);
+    width: 100%;
     height: 100%;
 
     scrollbar-color: white black;
